--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="img/AAAAAA/favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.jpg" type="image/x-icon">
 
     <!--Link Stylesheet-->
     <link rel="stylesheet" href="css/style.css">
@@ -21,8 +21,8 @@
     <audio src="audio/a-boate-california.mp3" class="gameover"></audio>
     <div class="game-board">
         <img src="img/clouds.png" class="clouds">
-        <img src="img/AAAAAA/hero.gif" class="mario">
-        <img src="img/AAAAAA/LV42.gif" class="pipe">
+        <img src="img/hero.gif" class="mario">
+        <img src="img/LV42.gif" class="pipe">
     </div>
     <p id="text-start">Aperta qualquer tecla ae</p>
     <!--Script-->
