--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!--Game-->
-    <audio src="audio/cartoon-jump.mp3" class="audiojump"></audio>
+    <audio src="audio/cr7-siuu.mp3" class="audiojump"></audio>
     <audio src="audio/a-boate-california.mp3" class="gameover"></audio>
     <div class="game-board">
         <img src="img/clouds.png" class="clouds">
